--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
 </head>
 <body>
-
+    <header class="bg-primary text-white text-center py-5">
+        <h1 class="display-4">Top Tourist Destinations</h1>
+        <p class="lead">Explore some of the most remarkable places around the world.</p>
+    </header>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-8tVTLZ2EL8FBW8O2R6D2KQ2TwM4hT+J91gA6A1V9dqS0OWTFAf2SKTGDR6qen9sc" crossorigin="anonymous"></script>
 
 </body>
