we create destination number two

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
                     </div>
                 </div>
 
+                 
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="https://cdn.britannica.com/89/179589-138-3EE27C94/Overview-Great-Wall-of-China.jpg?w=800&h=450&c=crop" class="card-img-top destination-cover" alt="Great Wall of China">
+                        <div class="card-body">
+                            <h5 class="card-title destination-title">Great Wall of China</h5>
+                            <p class="card-text">The Great Wall stretches over 13,000 miles and was built to protect Chinese states from invasions. It's one of the most impressive feats of ancient engineering.</p>
+                            <p class="card-text"><strong>Location:</strong> Northern China</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
     </div>
