we create destiny number three

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
                     </div>
                 </div>
 
+                 
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZfXVM6-r36WJ2Q3lO58sLQC0JnnWspRoClw&s" class="card-img-top destination-cover" alt="Machu Picchu">
+                        <div class="card-body">
+                            <h5 class="card-title destination-title">Machu Picchu</h5>
+                            <p class="card-text">Machu Picchu is a 15th-century Inca citadel located in the Andes Mountains. It's known for its archaeological significance and breathtaking views.</p>
+                            <p class="card-text"><strong>Location:</strong> Cusco Region, Peru</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
     </div>
