we create destiny number four

--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
                     </div>
                 </div>
 
+                
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvEJDADOCBmZjLuO6WmN3uVAIYhgxgl3tjvw&s" class="card-img-top destination-cover" alt="Sydney Opera House">
+                        <div class="card-body">
+                            <h5 class="card-title destination-title">Sydney Opera House</h5>
+                            <p class="card-text">The Sydney Opera House is a renowned performing arts center known for its unique sail-like design. It's a major landmark in Sydney, Australia.</p>
+                            <p class="card-text"><strong>Location:</strong> Sydney, Australia</p>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
     </div>
