--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Top Tourist Destinations</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <style>
+        .destination-cover {
+            width: 100%;
+            height: auto;
+        }
+
+        body {
+            background: #f8f9fa;
+            text-align: center;
+        }
+    
+    </style>
 </head>
 <body>
     <header class="bg-primary text-white text-center py-5">
