we retouch the design page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             background: #f8f9fa;
             text-align: center;
         }
+        .destination-title {
+            font-family: Arial, sans-serif;
+            font-size: 2rem;
+            margin-top: 1rem;
+        }
     
     </style>
 </head>
